test_suite/alan-2022-examples/failing/005730_mutation.alan
source LU1 begin leave 1086 - 46 boolean end
